--- a/web/index.html
+++ b/web/index.html
@@ -9,14 +9,8 @@
 </head>
 <body>
 <div class="container">
-    <div class="col-lg-12">
-        <h1>Ticket Application</h1>
-        <a class="btn btn-primary" id="hw">Hello World!</a>
-        <hr/>
-        <input type="text" class="form-control" placeholder="Blank" />
-    </div>
-
-    <div id="deals">
+    <h1>Great Deals</h1>
+    <div id="deals" class="row">
         <!-- Target -->
     </div>
 </div>
