--- a/web/index.html
+++ b/web/index.html
@@ -10,6 +10,9 @@
 <body>
 <div class="container">
     <h1>Great Deals</h1>
+    <ticket_app>
+      Stuff
+    </ticket_app>
     <div id="deals" class="row">
         <!-- Target -->
     </div>
