--- a/web/index.html
+++ b/web/index.html
@@ -9,10 +9,7 @@
 </head>
 <body>
 <div class="container">
-    <h1>Great Deals</h1>
-    <ticket_app>
-      Stuff
-    </ticket_app>
+    <tickets></tickets>
     <div id="deals" class="row">
         <!-- Target -->
     </div>
