--- a/web/index.html
+++ b/web/index.html
@@ -4,7 +4,7 @@
      <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>JIT Ticket Application</title>
     <link rel="stylesheet" href="packages/bootjack/css/bootstrap.min.css">
-    <link rel="stylesheet" href="https://bootswatch.com/flatly/bootstrap.min.css">
+    <link rel="stylesheet" href="styles/bootstrap.flatly.min.css">
     <link rel="stylesheet" href="styles/main.css">
 </head>
 <body>
