--- a/web/index.html
+++ b/web/index.html
@@ -9,24 +9,8 @@
 </head>
 <body>
 <div class="container">
-    <h1>Great Deals</h1>
-    <div id="deals" class="row">
-        <!-- Target -->
-    </div>
+  <tickets></tickets>
 </div>
-
-<template>
-    <!-- This is a box -->
-    <div class="col-xs-4">
-        <div class="deal-box well clearfix">
-            <img/>
-            <h3>City</h3>
-            <h4>Date</h4>
-            <p>Descriptions</p>
-            <h5>Price</h5>
-        </div>
-    </div>
-</template>
 
 <script type="application/dart" src="main.dart"></script>
 <script src="packages/browser/dart.js"></script>
